# SearchServer

./: AStar.h  Algorithms.cpp  Algorithms.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFS.h  Graph.cpp  Graph.h  Isearchable.h  Isearcher.h  Problems.cpp  Problems.h  README.md  Searchable.cpp  Searchable.h  Searcher.cpp  Searcher.h  ServerImplements.cpp  ServerImplements.h  Side_server.h  Solution.cpp  Solution.h  Solver.h  State.cpp  State.h  a.out  auto_client.py  main.cpp  matrix_test.txt  parallel_tester.py  pdf.ods  ppp.py
Algo/: AStar.h  BFS.h  BestFirstSearch.h  DFS.h
CacheManager/: CacheManager.h  FileCacheManager.cpp  FileCacheManager.h
FINISG/: Matrix17x17.txt  Matrix21x21.txt  Matrix29x29.txt  Matrix32x32.txt  Matrix33x33.txt  Matrix38x38.txt  Matrix43x43.txt  Matrix46x46.txt  Matrix49x49.txt  Matrix50x50.txt
MyStruct/: MyQueqe.h
SerachAlgo/: Isearchable.h  Isearcher.h  Searchable.h  SearchableGraph.cpp  SearchableGraph.h  SearchableMatrix.cpp  SearchableMatrix.h  Searcher.h  SearcherAbstract.h  SearcherPriority.h
Server/: MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  Side_server.h
Solver/: OAdapter.cpp  OAdapter.h  Solver.h  StringReverse.cpp  StringReverse.h
clientHandler/: ClientHandler.h  MatrixClientHandler.cpp  MatrixClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h
matrixPY/: createMatrix.py
solutionTxt/: ASTAR  BESTFIRST  BFS  DFS
